added some common component

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@
   --primary: #FFD23F;
   --secondary: #EE4266;
   --gray: #7b7b7b;
+  --light-gray: #E9E9E9;
   --black: #0A0A0C;
 
   /* text color */
